--- a/BookLibraryAppMVC/Views/Books/Delete.cshtml
+++ b/BookLibraryAppMVC/Views/Books/Delete.cshtml
@@ -33,13 +33,13 @@
             @Html.DisplayNameFor(model => model.Author)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Author.Id)
+            @Html.DisplayFor(model => model.Author.AuthorName)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Publisher)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Publisher.Id)
+            @Html.DisplayFor(model => model.Publisher.PublisherName)
         </dd>
     </dl>
     
